--- a/开发调试说明.md
+++ b/开发调试说明.md
@@ -24,6 +24,16 @@ vue invoke vue-cli-plugin-rishiqing
 
 --------------------------------------------------------------------------
 
+注意：
+
+由于当前 NPM版本(v.6)中执行`npm install`时，对于 link 的包，会从线上重新安装，删除覆盖掉原先 link 的包。
+所以，在开发调试时，第一次`npm link vue-cli-plugin-rishiqing`、`invoke`之后,触发了 npm install,link的包被删除。
+所以再次`invoke`时，需要重新`link`,再`invoke`。
+
+相关NPM [Issues](https://github.com/npm/npm/issues/17287)
+
+--------------------------------------------------------------------------
+
 如果不是调试修改插件，而是使用本插件最新版本创建项目时，可以同通过插件的本地文件安装
 
 vue create --preset /本地插件路径/vue-cli-plugin-rishiqing your-project-name
