--- a/开发调试说明.md
+++ b/开发调试说明.md
@@ -27,8 +27,9 @@ vue invoke vue-cli-plugin-rishiqing
 注意：
 
 由于当前 NPM版本(v.6)中执行`npm install`时，对于 link 的包，会从线上重新安装，删除覆盖掉原先 link 的包。
-所以，在开发调试时，第一次`npm link vue-cli-plugin-rishiqing`、`invoke`之后,触发了 npm install,link的包被删除。
-所以再次`invoke`时，需要重新`link`,再`invoke`。
+所以，在开发调试时，项目初始化之后，第一次`npm link vue-cli-plugin-rishiqing`、`invoke`之后,触发了 npm install,link的包被删除。
+所以需要先删除掉覆盖安装的包，再重新`link`。
+在此之后，项目如果有新安装包(项目本身添加了包，或者本插件的 generator 中新增了依赖包，都会触发`npm install`),那么`invoke`之前都需要重新`link`。
 
 相关NPM [Issues](https://github.com/npm/npm/issues/17287)
 
